# mathscape

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yaml  flake.nix
apis/mathscape-inference/: README.md  openapi.yaml
crates/mathscape-api/: Cargo.toml  build.rs
crates/mathscape-api/src/: graphql.rs  lib.rs  types.rs
crates/mathscape-axiom-bridge/: Cargo.toml
crates/mathscape-axiom-bridge/src/: lib.rs
crates/mathscape-axiom-bridge/tests/: autonomous_traverse.rs  big_run_and_snapshot.rs  certified_compound_spin.rs  coach_driven_motor.rs  dense_campaign.rs  edge_riding.rs  excellent_mathematician.rs  experiment_catalog.rs  first_model.rs  fix_point_motor.rs  flex_multi_layer.rs  full_promotion_pipeline.rs  isolate_collapse.rs  law_discovery_tensor.rs  long_run_archive.rs  mathscape_map_spin.rs  mathscape_penetration.rs  natural_emergence.rs  perpetual_loop_fix_point.rs  perpetual_loop_real_motor.rs  phase_h_unblock.rs  real_generator_to_bridge.rs  repeated_arrival.rs  resume_from_snapshot.rs  rich_corpus_breakthrough.rs  self_bootstrap.rs  self_reinforcing_spin.rs  state_machine_pipeline.rs  tensor_discovery.rs
crates/mathscape-axiom-bridge/tests/common/: experiment.rs  mod.rs
crates/mathscape-cli/: Cargo.toml
crates/mathscape-cli/src/: main.rs
crates/mathscape-compress/: Cargo.toml
crates/mathscape-compress/src/: adapter.rs  antiunify.rs  egraph.rs  extract.rs  law_generator.rs  lib.rs  meta_gen.rs
crates/mathscape-compress/tests/: mixed_extraction.rs
crates/mathscape-config/: Cargo.toml
crates/mathscape-config/src/: lib.rs
crates/mathscape-core/: Cargo.toml
crates/mathscape-core/src/: adaptive_corpus.rs  autograd.rs  bandit_probe.rs  bettyfine.rs  bootstrap.rs  builtin.rs  certification.rs  coach.rs  control.rs  corpus.rs  demotion.rs  environment.rs  epoch.rs  eval.rs  event.rs  form_tree.rs  hash.rs  inference.rs  lib.rs  lifecycle.rs  math_problem.rs  mathscape_map.rs  meta.rs  meta_loop.rs  migration.rs  model_testing.rs  optimizer.rs  orchestrator.rs  parse.rs  plasticity.rs  policy.rs  primitives.rs  promotion.rs  promotion_gate.rs  reduction.rs  rich_corpus.rs  snapshot.rs  streaming_policy.rs  task.rs  tensor.rs  (+5 more)
crates/mathscape-core/tests/: corpus_and_demotion.rs  epoch_dispatch.rs  knowability.rs  orchestrator.rs  perpetual_loop.rs  pressure_and_collapse.rs  standalone_inference.rs  stress_loop.rs  theory_invariants.rs
crates/mathscape-db/: Cargo.toml
crates/mathscape-db/src/: main.rs
crates/mathscape-discovery/: Cargo.toml
crates/mathscape-discovery/src/: catalog.rs  lib.rs  matcher.rs  representation.rs  scanner.rs
crates/mathscape-entity/: Cargo.toml
crates/mathscape-entity/src/: epoch.rs  eval_trace.rs  lib.rs  library.rs  lineage_event.rs  population.rs  proof.rs  proof_dep.rs  symbol_dep.rs
crates/mathscape-evolve/: Cargo.toml
crates/mathscape-evolve/src/: individual.rs  lib.rs  mutate.rs  population.rs  select.rs
crates/mathscape-inference-api/: Cargo.toml
crates/mathscape-inference-api/src/: adapter.rs  lib.rs  service.rs  types.rs
crates/mathscape-mcp/: Cargo.toml
crates/mathscape-mcp/src/: main.rs
crates/mathscape-migration/: Cargo.toml
crates/mathscape-migration/src/: lib.rs  m20250101_000001_initial_schema.rs  m20250101_000002_graph_metadata.rs
crates/mathscape-policy/: Cargo.toml
crates/mathscape-policy/src/: lib.rs
crates/mathscape-proof/: Cargo.toml
crates/mathscape-proof/src/: bootstrap_lisp.rs  discovery.rs  lean_export.rs  lib.rs  map_event_lisp.rs  mechanism.rs  policy_lisp.rs  primitives_lisp.rs  semantic.rs
crates/mathscape-reward/: Cargo.toml
crates/mathscape-reward/src/: adapter.rs  compress_score.rs  lib.rs  lisp_reward.rs  novelty.rs  reward.rs
crates/mathscape-reward/tests/: end_to_end_epoch.rs
crates/mathscape-service/: Cargo.toml
crates/mathscape-service/src/: main.rs
crates/mathscape-store/: Cargo.toml
crates/mathscape-store/src/: expr_store.rs  lib.rs  persistent_registry.rs
crates/mathscape-store/src/entity/: epochs.rs  eval_traces.rs  library.rs  lineage_events.rs  mod.rs  population.rs  proof_deps.rs  proofs.rs  symbol_deps.rs
crates/mathscape-store/tests/: cross_process_replay.rs
crates/primitive-forge/: Cargo.toml
crates/primitive-forge/src/: lib.rs
deploy/charts/mathscape/: Chart.yaml  values.yaml
deploy/charts/mathscape-web/: Chart.yaml  values.yaml
deploy/charts/mathscape-web/templates/: _helpers.tpl
deploy/charts/mathscape-web/tests/: deployment_test.yaml  service_test.yaml
deploy/charts/mathscape/templates/: _helpers.tpl  configmap.yaml  service.yaml  statefulset.yaml
deploy/charts/mathscape/tests/: pvc_test.yaml  service_test.yaml  statefulset_test.yaml
docs/arch/: README.md  apparatus-universals.md  autonomous-traversal.md  axiomatization-pressure.md  bettyfine-complexity-duality.md  bettyfine.md  collapse-and-surprise.md  compression.md  condensation-reward.md  core-algorithm-review.md  corpus-dynamics.md  demotion-pipeline.md  deployment.md  discovery.md  domain-iac-forge.md  domain-ml-forge.md  edge-50cycle-findings.md  edge-riding.md  epoch-quad.md  fixed-point-convergence.md  forced-realization.md  in-memory-convergence-layering.md  inception.md  knowability-criterion.md  landmarks.md  lisp-port-plan.md  machine-synthesis.md  machinery-audit.md  mcp.md  minimal-model-ladder.md  ml-apparatus.md  ml4-mechanism-evolution.md  oscillating-irreducibility.md  perpetual-improvement.md  promotion-pipeline.md  proofs.md  realization-plan.md  reward-calculus.md  reward.md  rust-lisp-duality.md  (+6 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/config/: ConfigPanel.tsx
frontend/src/components/dashboard/: StatusPanel.tsx
frontend/src/components/epochs/: EpochChart.tsx
frontend/src/hooks/: useEngine.ts
frontend/src/test/: fixtures.ts
frontend/src/theme/: index.ts  muiTheme.ts  tokens.test.ts  tokens.ts
frontend/src/types/: api.test.ts  api.ts
module/: default.nix
proto/mathscape/v1/: engine.proto
