[package]
name = "mathscape-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Point, Number, Fn, Term enum, hash-consing, evaluation"

[features]
test-helpers = []

[dependencies]
blake3.workspace = true
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
mathscape-compress.workspace = true
mathscape-reward.workspace = true
