[package]
name = "mathscape-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database management CLI: init, migrate, status, verify, compact, export"

[[bin]]
name = "mathscape-db"
path = "src/main.rs"

[dependencies]
mathscape-migration.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
