[package]
name = "mathscape-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discovery mining: epoch analysis, known-math pattern matching, representation data for React UI"

[dependencies]
mathscape-core.workspace = true
mathscape-store.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
mathscape-core = { workspace = true, features = ["test-helpers"] }
