[package]
name = "mathscape-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SeaORM entities — canonical data model for all mathscape tables"

[dependencies]
sea-orm.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
