[package]
name = "mathscape-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server (stdio transport) for observe-only agent interaction"

[[bin]]
name = "mathscape-mcp"
path = "src/main.rs"

[dependencies]
mathscape-core.workspace = true
mathscape-store.workspace = true
mathscape-evolve.workspace = true
mathscape-reward.workspace = true
mathscape-proof.workspace = true
mathscape-discovery.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mathscape-config.workspace = true
mathscape-compress.workspace = true
mathscape-axiom-bridge = { path = "../mathscape-axiom-bridge" }
