[package]
name = "mathscape-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proof construction, verification, composition, Lean 4 export"

[dependencies]
mathscape-core.workspace = true
mathscape-store.workspace = true
serde.workspace = true

[dev-dependencies]
mathscape-core = { workspace = true, features = ["test-helpers"] }
