[package]
name = "mathscape-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "redb expression store, SQLite metadata, epoch transactions"

[dependencies]
mathscape-core.workspace = true
redb.workspace = true
rusqlite.workspace = true
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
