[package]
name = "mathscape-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "redb expression store, PostgreSQL metadata via SeaORM, epoch transactions"

[dependencies]
mathscape-core.workspace = true
mathscape-migration.workspace = true
redb.workspace = true
sea-orm.workspace = true
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
thiserror = "1"
tracing.workspace = true

[dev-dependencies]
mathscape-core = { workspace = true, features = ["test-helpers"] }
tempfile = "3"
